--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto aula 1</title>
+    <title>Aula GIT</title>
 </head>
 <body>
-  <h1>fase 1</h1>  
-  <p>aula quarta-feira</p>
+    
 </body>
 </html>
